Fix overflow of share url dialog in call

--- a/stylesheets/_call.scss
+++ b/stylesheets/_call.scss
@@ -442,6 +442,8 @@
             display: flex; 
             flex-direction: column;
             align-items: center;
+            max-height: 100%;
+            max-width: 100%;
 
             > *:not(:last-child) {
                 margin-bottom: 1em;
